--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongoose": "^6.0.12"
+    "mongoose": "^6.0.12",
+    "validator": "^13.7.0"
   }
 }
